--- a/index.html
+++ b/index.html
@@ -179,14 +179,14 @@
 const sorular = [
     "Soru 1:Bağlantılı Slayt ve Sayfa: Mediastinum (Sayfa 2-4)​Taktik: Mediastinum bölümlerindeki anatomik oluşumları doğru yerleştirebilmek için mediastinum süperius ve medius içeriklerini tekrar gözden geçirin.Bu bölümleri içeren bir tablo veya şema üzerinde çalışmak faydalı olacaktır. ",
     "Soru 2:Bağlantılı Slayt ve Sayfa: Toraks Duvarı Anatomisi (Sayfa 17-21)​Taktik: Thorax tabakalarını birbiriyle karıştırmamak için özellikle fascia endothoracica’nın konumunu ve işlevini öğrenmeye odaklanın. Slaytlardaki kesit çizimlerini kullanarak bilgiyi pekiştirebilirsiniz. ",
-    "Soru 3: ",
-    "Soru 4: ",
-    "Soru 5: ",
-    "Soru 6: ",
-    "Soru 7: ",
-    "Soru 8: ",
-    "Soru 9: ",
-    "Soru 10: ",
+    "Soru 3:Bağlantılı Slayt ve Sayfa: Kalp (Sayfa 22-25)​Taktik: Kalbin yüzey anatomisini daha iyi öğrenmek için margo dexter ve diğer kenarları detaylıca çalışın. Şemalar ve görseller üzerinden tekrarla ezberi güçlendirin ",
+    "Soru 4:Bağlantılı Slayt ve Sayfa: Toraks Duvarı Anatomisi (Sayfa 12-15)​Taktik: Apertura thoracis superior’un sınırlarını öğrenirken, sınır oluşturan yapıların konumunu ve işlevini dikkatle inceleyin. Şema ve kesit görüntülerini kullanarak detaylara odaklanın. ",
+    "Soru 5: İlgili Slayt: Kalp Arterleri, 04 Kalp 2, Sayfa 3-6​Taktik: Bu soruyu yanlış yapan bir öğrenci, koroner arterlerin dallarının hangi bölgeleri beslediğini öğrenmelidir. Öneri: Koroner arterlerin dallarını ve bu dalların beslediği bölgeleri bir şema üzerinden çalışın. Özellikle septum interventriculare ve ventrikül duvarları gibi kritik alanlara dikkat edin.",
+    "Soru 6:İlgili Slayt: Büyük Damarlar, 05 Büyük Damarlar, Sayfa 3-8​Taktik: Yanlış yapan öğrenciler, aortanın bölümleri ve dallarını içeren görseller üzerinde çalışmalıdır. Öneri: Aortanın dallarını ve dalların çıkış noktalarını bir çizim üzerinde etiketleyerek öğrenin. ",
+    "Soru 7:İlgili Slayt: Lenfatik Sistem, 06 Lenfatik Sistem, Sayfa 3-6​Taktik: Yanlış yapanlar, lenf sıvısının dolaşımı ve kapakçıkların işlevi konularına çalışmalıdır. Öneri: Lenf sıvısının hareketini ve etkili faktörleri bir akış diyagramı ile görselleştirin. ",
+    "Soru 8:İlgili Slayt: Lenfatik Sistem, 06 Lenfatik Sistem, Sayfa 10-15​Taktik: Yanlış yapanlar, ductus thoracicus'un seyri ve anatomik komşuluklarını çalışmalıdır. Öneri: Ductus thoracicus’un anatomik konumunu bir vücut modeli veya şema üzerinden inceleyin. ",
+    "Soru 9: Alakalı Slaytlar: 07 Burun ve Burunla İlgili Yapılar (1), Sayfa 39Taktik: Bu soruyu yanlış yapan bir öğrenci, koku bölgesindeki özel mukozal yapı ve sinir ilişkilerini çalışmalıdır. Özellikle epitel türlerini birbirinden ayırt etme konusunda tekrar yapmalıdır. Bu bölgedeki mukozanın fonksiyonel ve histolojik özelliklerine dikkat etmek önemlidir.",
+    "Soru 10: Alakalı Slaytlar: 08 Larynx, Sayfa 27Taktik: Yanlış yapan öğrenciler, larenksin kıkırdak yapıları ve bunların oluşturduğu çıkıntılar üzerine yoğunlaşmalıdır. Kıkırdakların lokalizasyonları ve görevlerini görsellerle destekleyerek çalışmak faydalı olur.",
     "Soru 11: ",
     "Soru 12: ",
     "Soru 13: ",
